# nonogram_solver

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
solver/: Cargo.toml  makefile
solver/src/: lib.rs  main.rs
solver/test/: t4.json
src/: main.rs
test/: t1.json  t2.json  t3.json
web/: Cargo.toml  bundle.js  index.css  index.html  index.scss  main.js  makefile
web/src/: app.rs
