[package]
name = "picross_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde = {version = "^1.0", features = ["derive"]}
ndarray = "^0.16.0"
anyhow = "^1.0"
clap   = { version = "4.5.15", features = ["suggestions","color",
			 	 	 				 	 									 	  "wrap_help",
																					"unicode","env",
																					"derive","cargo"] }
