[package]
name = "web"
version = "0.1.0"
authors = ["CTHULHU-Jesus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.19"
essence_math = { path = "../essence_math" }
web-sys = {version = "0.3", features = ["InputEvent"] }

[lib]
crate-type = ["cdylib"]